RecipeBookBackend/src/main/java/com/example/RecipeBook/errors/ItemsCannotBeCombined.java
package com.example.RecipeBook.errors;

public class ItemsCannotBeCombined extends RuntimeException {
    public ItemsCannotBeCombined() {
        super("Items canot be combined");
    }
}
